--- a/src/pages/ResumePage/ResumePage.css
+++ b/src/pages/ResumePage/ResumePage.css
@@ -22,7 +22,7 @@
     font-size: 2.2rem;
     cursor: pointer;
     margin: 2rem;
-    z-index: 5;
+    z-index: 30;
     border: solid 2px var(--primary-color)
   }
 
